<resources>
    <string name="app_name">VoxFeed</string>

    <string name="tab_start">Start</string>
    <string name="tab_publications">Publications</string>

    <!--Fragment start-->
    <string name="welcome_to_voxfeed_textview">Welcome to VoxFeed</string>

    <!--Detail-->
    <string name="like">Like</string>
    <string name="clicks">Clicks</string>
    <string name="comments">Comments</string>
    <string name="shared">Shared</string>
    <string name="scope">Scope</string>
    <string name="see_publications_in">See publications in </string>
    <string name="campaign_invation">Campaign invitation</string>
    <string name="usd">usd</string>
    <string name="internet_error">Please check your internet connection</string>
    <string name="publications_not_found">Publications not found :(</string>
</resources>
