<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="50dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="75dp"
            app:expandedTitleTextAppearance="?textAppearanceListItemSmall"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/cover_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/anim_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/logo_imageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="7dp"
                    android:src="@drawable/icon_heart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/campaign_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/earnings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="$120.00 USD"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollableview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/campaign_invation"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout style="@style/item_layout">

                <TextView
                    style="@style/item_label_textview"
                    android:drawableLeft="@drawable/icon_heart"
                    android:text="@string/like" />

                <TextView
                    android:id="@+id/like"
                    style="@style/item_value_textview" />
            </LinearLayout>

            <View style="@style/divider" />

            <LinearLayout style="@style/item_layout">

                <TextView
                    style="@style/item_label_textview"
                    android:drawableLeft="@drawable/icon_click"
                    android:text="@string/clicks" />

                <TextView
                    android:id="@+id/click"
                    style="@style/item_value_textview" />
            </LinearLayout>

            <View style="@style/divider" />

            <LinearLayout style="@style/item_layout">

                <TextView
                    style="@style/item_label_textview"
                    android:drawableLeft="@drawable/icon_comment"
                    android:text="@string/comments" />

                <TextView
                    android:id="@+id/comments"
                    style="@style/item_value_textview" />

            </LinearLayout>

            <View style="@style/divider" />

            <LinearLayout style="@style/item_layout">

                <TextView
                    style="@style/item_label_textview"
                    android:drawableLeft="@drawable/icon_share"
                    android:text="@string/shared" />

                <TextView
                    android:id="@+id/shared"
                    style="@style/item_value_textview" />

            </LinearLayout>

            <View style="@style/divider" />

            <LinearLayout style="@style/item_layout">

                <TextView
                    style="@style/item_label_textview"
                    android:drawableLeft="@drawable/icon_reach"
                    android:text="@string/scope" />

                <TextView
                    android:id="@+id/scope"
                    style="@style/item_value_textview" />

            </LinearLayout>

            <View style="@style/divider" />

            <TextView
                android:id="@+id/see_publications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center_vertical|center_horizontal"
                android:textAllCaps="true"
                android:textSize="15sp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
